sfdx-source/force-app/main/default/objects/User/fields/Employee_ID_Okta__c.field-meta.xml
<CustomField>
    <fullName>Employee_ID_Okta__c</fullName>
    <description>LEM-2490: To store user employee ID from okta to populate user manager ID.</description>
    <externalId>true</externalId>
    <label>Employee ID (Okta)</label>
    <length>50</length>
    <type>Text</type>
</CustomField>