sfdx-source/force-app/main/default/objects/User/fields/Full_Name__c.field-meta.xml
<CustomField>
    <fullName>Full_Name__c</fullName>
    <description>LEM-5684: It shows the full name of the user that is first name plus last name.</description>
    <formula>IF(FirstName = &apos;&apos;, LastName, FirstName + &apos; &apos;+ LastName )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Full Name</label>
    <type>Text</type>
</CustomField>