sfdx-source/force-app/main/default/objects/User/fields/Job_Family__c.field-meta.xml
<CustomField>
    <fullName>Job_Family__c</fullName>
    <complianceGroup>GDPR</complianceGroup>
    <description>LEM-1378: This field represents the Job family of the User and would be derived from Workday.</description>
    <label>Job Family</label>
    <length>80</length>
    <type>Text</type>
</CustomField>