sfdx-source/force-app/main/default/objects/User/fields/Job_Level__c.field-meta.xml
<CustomField>
    <fullName>Job_Level__c</fullName>
    <complianceGroup>GDPR</complianceGroup>
    <description>LEM-1378: This field represents the Job level of the User and would be derived from Workday.</description>
    <label>Job Level</label>
    <length>80</length>
    <type>Text</type>
</CustomField>