sfdx-source/force-app/main/default/objects/User/fields/Manager_ID_Okta__c.field-meta.xml
<CustomField>
    <fullName>Manager_ID_Okta__c</fullName>
    <description>LEM-2490: To store user manager ID from okta to populate user manager ID.</description>
    <label>Manager ID (Okta)</label>
    <length>50</length>
    <type>Text</type>
</CustomField>