sfdx-source/force-app/main/default/objects/User/fields/Persona__c.field-meta.xml
<CustomField>
    <fullName>Persona__c</fullName>
    <description>LEM-22640: It indicates user&apos;s team and used for &apos;SMB&apos; operational metrics. It&apos;s a temporary field and planned to be cleaned-up in LEM-22353 ticket.</description>
    <label>Persona</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>SMB Pre-Sales: Manager</fullName>
            </value>
            <value>
                <fullName>SMB Pre-Sales: SDR Manager</fullName>
            </value>
            <value>
                <fullName>SMB Pre-Sales: SDR Rep</fullName>
            </value>
            <value>
                <fullName>Comm Ops users</fullName>
            </value>
            <value>
                <fullName>Data Ops</fullName>
            </value>
            <value>
                <fullName>Data Ops Manager</fullName>
            </value>
            <value>
                <fullName>Fraud Agents</fullName>
            </value>
            <value>
                <fullName>Merchant Partner</fullName>
            </value>
            <value>
                <fullName>Post Sales: Account Development Rep</fullName>
            </value>
            <value>
                <fullName>Post Sales: Account Manager</fullName>
            </value>
            <value>
                <fullName>Post Sales: Account Manager Manager</fullName>
            </value>
            <value>
                <fullName>Quantanite User</fullName>
            </value>
            <value>
                <fullName>Quantanite Users</fullName>
            </value>
            <value>
                <fullName>S&amp;O User/ S&amp;O Rep</fullName>
            </value>
            <value>
                <fullName>S&amp;O User/S&amp;O Manager</fullName>
            </value>
            <value>
                <fullName>Sales Enablement</fullName>
            </value>
            <value>
                <fullName>Service Manager</fullName>
            </value>
            <value>
                <fullName>Service Rep</fullName>
            </value>
            <value>
                <fullName>SMB Post Sales Vendor Manager</fullName>
            </value>
            <value>
                <fullName>SMB Post Sales Vendor Rep</fullName>
            </value>
            <value>
                <fullName>SMB Post Sales: Account Development Manager</fullName>
            </value>
            <value>
                <fullName>SMB Pre Sales Vendor Manager</fullName>
            </value>
            <value>
                <fullName>SMB Pre Sales Vendor Rep</fullName>
            </value>
            <value>
                <fullName>SMB Sales: Pre-Sales Rep</fullName>
            </value>
            <value>
                <fullName>Support Agent</fullName>
            </value>
            <value>
                <fullName>Vendor - Arcgate</fullName>
            </value>
            <value>
                <fullName>Data Migration</fullName>
            </value>
            <value>
                <fullName>Automated Process</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>