sfdx-source/force-app/main/default/objects/User/fields/Roster_Manager__c.field-meta.xml
<CustomField>
    <fullName>Roster_Manager__c</fullName>
    <complianceGroup>GDPR</complianceGroup>
    <description>LEM-1378: This field represents the Users Roster Manager and would be manually populated using Data load.</description>
    <label>Roster Manager</label>
    <relationshipName>RosterManagers</relationshipName>
    <restrictedAdminField>false</restrictedAdminField>
    <type>Hierarchy</type>
</CustomField>