sfdx-source/force-app/main/default/objects/User/fields/Sales_Team__c.field-meta.xml
<CustomField>
    <fullName>Sales_Team__c</fullName>
    <description>LEM-11238: This field represents a user’s Sales Team. It is primarily utilized for filtering/grouping in the adoption reports and dashboards</description>
    <label>Sales Team</label>
    <length>255</length>
    <type>Text</type>
</CustomField>