sfdx-source/force-app/main/default/objects/User/fields/Team__c.field-meta.xml
<CustomField>
    <fullName>Team__c</fullName>
    <complianceGroup>GDPR</complianceGroup>
    <description>LEM-1378: This field represents the Users Team and would be manually populated using Data load.</description>
    <label>Team</label>
    <length>200</length>
    <type>Text</type>
</CustomField>