sfdx-source/force-app/main/default/objects/User/fields/Worker_s_Manager__c.field-meta.xml
<CustomField>
    <fullName>Worker_s_Manager__c</fullName>
    <complianceGroup>GDPR</complianceGroup>
    <description>LEM-1378: This field represents the Worker’s Manager and would be derived from Workday.</description>
    <label>Worker&apos;s Manager</label>
    <relationshipName>WorkerManagers</relationshipName>
    <restrictedAdminField>false</restrictedAdminField>
    <type>Hierarchy</type>
</CustomField>